@@ -1,4 +1,4 @@
-gui_version = '0.10.0'
+gui_version = '0.10.1'
 gui_branch = 'Master'
 pycharm_version = '2021.3'
 python_version = '3.7.8'
